Increase Unit Test coverage